[gd_scene load_steps=4 format=3 uid="uid://cydmr5pkv4ije"]

[ext_resource type="Script" uid="uid://c3jmebpaao3f3" path="res://enemy_test.gd" id="1_tegdf"]
[ext_resource type="Texture2D" uid="uid://bed6t8ps6taem" path="res://assets/Weapons/Shield_1/Shield_1_400%.png" id="1_tekfo"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tegdf"]
size = Vector2(146, 144)

[node name="enemy_test" type="Area2D"]
collision_layer = 524288
collision_mask = 4
script = ExtResource("1_tegdf")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_tegdf")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_tekfo")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
